--- a/cypher.html
+++ b/cypher.html
@@ -4,16 +4,21 @@
         <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
         <style>
+            *, *::before, *::after {
+                box-sizing: border-box;
+            }
+
             html, body {
                 margin: 0;
                 padding: 0;
                 font-family: sans-serif;
+                background-color: hsl(0, 0%, 95%);
             }
 
             .grid {
-                width: 900px;
+                width: auto;
                 display: grid;
-                grid-template-columns: repeat(7, 1fr);
+                grid-template-columns: repeat(auto-fit, 120px);
                 gap: 20px;
                 margin: 20px auto;
             }
@@ -23,8 +28,13 @@
             }
 
             .phrase {
-                grid-column: 1 / -2;
+                grid-column: 1 / -3;
                 height: 40px;
+                font-size: 20px;
+                line-height: 40px;
+            }
+            .delete {
+                grid-column: -3 / -2;
                 font-size: 20px;
             }
             .clear {
@@ -41,8 +51,6 @@
                 flex-direction: column;
                 gap: 10px;
             }
-
-            .char
 
             .char:hover {
                 background-color: hsl(0, 0%, 98%);
@@ -67,47 +75,95 @@
                 width: 32px;
             }
 
+            .tabs {
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                border-bottom: 1px solid hsl(0, 0%, 80%);
+                background-color: hsl(0, 0%, 90%);
+            }
+
+            .tab {
+                display: block;
+                padding: 10px 20px 8px 20px;
+                border-bottom: 2px solid transparent;
+            }
+
+            .tab:hover {
+                border-bottom: 2px solid hsl(0, 0%, 80%);
+            }
+
+            .selected_tab {
+                display: block;
+                padding: 10px 20px 8px 20px;
+                border-bottom: 2px solid hsl(200, 80%, 40%);
+            }
+
         </style>
     </head>
     <body>
-        <div class="grid" x-data="{ value: '', chars: [], }">
+        <div x-data="{chars: [], selected: 'entry', history: [] }">
+            <nav class="tabs">
+                <span x-on:click="selected = 'entry'" :class="selected == 'entry' ? 'selected_tab' : 'tab'">Entry</span>
+                <span x-on:click="selected = 'history'" :class="selected == 'history' ? 'selected_tab' : 'tab'">History</span>
+            </nav>
+        <div x-show="selected == 'history'">
+            History
+            <button class="clear" x-on:click="history=[]">Clear History</button>
+            <template x-for="hist in history">
+                <div>
+                    <div class="chars">
+                    <template x-for="char in hist">
+                        <img :src="'characters/'+char+'.svg'">
+                    </template>
+                    </div>
+                    <div class="phrase" x-text="hist.join('').replace(/_/g, ' ')"> </div>
+                </div>
+            </template>
+        </div>
+        <div x-show="selected == 'entry'">
+            <h1 class="header">Entry</h1>
             <div class="chars">
                 <template x-for="char in chars">
                     <img :src="'characters/'+char+'.svg'">
                 </template>
             </div>
-            <input class="phrase" type="text" x-model="value">
-            <button class="clear" x-on:click="value = '', chars=[]">Clear</button>
-            <div class="char" x-on:click="value += 'a', chars.push('a')"><img src="characters/a.svg"> a</div>
-            <div class="char" x-on:click="value += 'b', chars.push('b')"><img src="characters/b.svg"> b</div>
-            <div class="char" x-on:click="value += 'c', chars.push('c')"><img src="characters/c.svg"> c</div>
-            <div class="char" x-on:click="value += 'd', chars.push('d')"><img src="characters/d.svg"> d</div>
-            <div class="char" x-on:click="value += 'e', chars.push('e')"><img src="characters/e.svg"> e</div>
-            <div class="char" x-on:click="value += 'f', chars.push('f')"><img src="characters/f.svg"> f</div>
-            <div class="char" x-on:click="value += 'g', chars.push('g')"><img src="characters/g.svg"> g</div>
-            <div class="char" x-on:click="value += 'h', chars.push('h')"><img src="characters/h.svg"> h</div>
-            <div class="char" x-on:click="value += 'i', chars.push('i')"><img src="characters/i.svg"> i</div>
-            <div class="char" x-on:click="value += 'j', chars.push('j')"><img src="characters/j.svg"> j</div>
-            <div class="char" x-on:click="value += 'k', chars.push('k')"><img src="characters/k.svg"> k</div>
-            <div class="char" x-on:click="value += 'l', chars.push('l')"><img src="characters/l.svg"> l</div>
-            <div class="char" x-on:click="value += 'm', chars.push('m')"><img src="characters/m.svg"> m</div>
-            <div class="char" x-on:click="value += 'n', chars.push('n')"><img src="characters/n.svg"> n</div>
-            <div class="char" x-on:click="value += 'o', chars.push('o')"><img src="characters/o.svg"> o</div>
-            <div class="char" x-on:click="value += 'p', chars.push('p')"><img src="characters/p.svg"> p</div>
-            <div class="char" x-on:click="value += 'q', chars.push('q')"><img src="characters/q.svg"> q</div>
-            <div class="char" x-on:click="value += 'r', chars.push('r')"><img src="characters/r.svg"> r</div>
-            <div class="char" x-on:click="value += 's', chars.push('s')"><img src="characters/s.svg"> s</div>
-            <div class="char" x-on:click="value += 't', chars.push('t')"><img src="characters/t.svg"> t</div>
-            <div class="char" x-on:click="value += 'u', chars.push('u')"><img src="characters/u.svg"> u</div>
-            <div class="char" x-on:click="value += 'v', chars.push('v')"><img src="characters/v.svg"> v</div>
-            <div class="char" x-on:click="value += 'w', chars.push('w')"><img src="characters/w.svg"> w</div>
-            <div class="char" x-on:click="value += 'x', chars.push('x')"><img src="characters/x.svg"> x</div>
-            <div class="char" x-on:click="value += 'y', chars.push('y')"><img src="characters/y.svg"> y</div>
-            <div class="char" x-on:click="value += 'z', chars.push('z')"><img src="characters/z.svg"> z</div>
-            <div class="char" x-on:click="value += 'th', chars.push('th')"><img src="characters/th.svg"> th</div>
-            <div class="char" x-on:click="value += ' ', chars.push('space')"><img src="characters/space.svg">space</div>
+            <div></div>
+            <div class="phrase" x-text="chars.join('').replace(/_/g, ' ')"> </div>
+            <button class="delete" x-on:click="chars.splice(-1, 1)">Delete</button>
+            <button class="clear" x-on:click="history.push(chars), chars=[]">Clear</button>
+            <div class="grid">
+            <div class="char" x-on:click="chars.push('a')" @keyup.a="chars.push('a')"><img src="characters/a.svg"> a</div>
+            <div class="char" x-on:click="chars.push('b')"><img src="characters/b.svg"> b</div>
+            <div class="char" x-on:click="chars.push('c')"><img src="characters/c.svg"> c</div>
+            <div class="char" x-on:click="chars.push('d')"><img src="characters/d.svg"> d</div>
+            <div class="char" x-on:click="chars.push('e')"><img src="characters/e.svg"> e</div>
+            <div class="char" x-on:click="chars.push('f')"><img src="characters/f.svg"> f</div>
+            <div class="char" x-on:click="chars.push('g')"><img src="characters/g.svg"> g</div>
+            <div class="char" x-on:click="chars.push('h')"><img src="characters/h.svg"> h</div>
+            <div class="char" x-on:click="chars.push('i')"><img src="characters/i.svg"> i</div>
+            <div class="char" x-on:click="chars.push('j')"><img src="characters/j.svg"> j</div>
+            <div class="char" x-on:click="chars.push('k')"><img src="characters/k.svg"> k</div>
+            <div class="char" x-on:click="chars.push('l')"><img src="characters/l.svg"> l</div>
+            <div class="char" x-on:click="chars.push('m')"><img src="characters/m.svg"> m</div>
+            <div class="char" x-on:click="chars.push('n')"><img src="characters/n.svg"> n</div>
+            <div class="char" x-on:click="chars.push('o')"><img src="characters/o.svg"> o</div>
+            <div class="char" x-on:click="chars.push('p')"><img src="characters/p.svg"> p</div>
+            <div class="char" x-on:click="chars.push('q')"><img src="characters/q.svg"> q</div>
+            <div class="char" x-on:click="chars.push('r')"><img src="characters/r.svg"> r</div>
+            <div class="char" x-on:click="chars.push('s')"><img src="characters/s.svg"> s</div>
+            <div class="char" x-on:click="chars.push('t')"><img src="characters/t.svg"> t</div>
+            <div class="char" x-on:click="chars.push('u')"><img src="characters/u.svg"> u</div>
+            <div class="char" x-on:click="chars.push('v')"><img src="characters/v.svg"> v</div>
+            <div class="char" x-on:click="chars.push('w')"><img src="characters/w.svg"> w</div>
+            <div class="char" x-on:click="chars.push('x')"><img src="characters/x.svg"> x</div>
+            <div class="char" x-on:click="chars.push('y')"><img src="characters/y.svg"> y</div>
+            <div class="char" x-on:click="chars.push('z')"><img src="characters/z.svg"> z</div>
+            <div class="char" x-on:click="chars.push('th')"><img src="characters/th.svg"> th</div>
+            <div class="char" x-on:click="chars.push('_')"><img src="characters/_.svg">space</div>
 
-            
+        </div>
+        </div>
         </div>
     </body>
 </html>
