--- a/cypher.html
+++ b/cypher.html
@@ -1,169 +1,249 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
-        <style>
-            *, *::before, *::after {
-                box-sizing: border-box;
-            }
+<head>
+    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+    <title>Cypher Solver</title>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <style>
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
 
-            html, body {
-                margin: 0;
-                padding: 0;
-                font-family: sans-serif;
-                background-color: hsl(0, 0%, 95%);
-            }
+        html,
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: sans-serif;
+            background-color: hsl(0, 0%, 95%);
+            min-height: 100vh;
+        }
 
-            .grid {
-                width: auto;
-                display: grid;
-                grid-template-columns: repeat(auto-fit, 120px);
-                gap: 20px;
-                margin: 20px auto;
-            }
+        .grid {
+            width: auto;
+            display: grid;
+            grid-template-columns: repeat(7, 1fr);
+            gap: 10px;
+            padding: 20px;
+        }
 
-            img {
-                max-width: 100%;
-            }
+        img {
+            max-width: 100%;
+        }
 
-            .phrase {
-                grid-column: 1 / -3;
-                height: 40px;
-                font-size: 20px;
-                line-height: 40px;
-            }
-            .delete {
-                grid-column: -3 / -2;
-                font-size: 20px;
-            }
-            .clear {
-                grid-column: -2 / -1;
-                font-size: 20px;
-            }
-            .char {
-                background-color: hsl(0, 0%, 95%);
-                border-radius: 5px;
-                padding: 10px;
-                text-align: center;
-                font-size: 20px;
-                display: flex;
-                flex-direction: column;
-                gap: 10px;
-            }
+        .char {
+            background-color: hsl(0, 0%, 95%);
+            border-radius: 5px;
+            padding: 10px;
+            text-align: center;
+            font-size: 20px;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
 
-            .char:hover {
-                background-color: hsl(0, 0%, 98%);
-            }
+        .char:hover {
+            background-color: hsl(0, 0%, 98%);
+        }
 
-            .char:active {
-                background-color: hsl(0, 0%, 80%);
-            }
+        .char:active {
+            background-color: hsl(0, 0%, 80%);
+        }
 
-            .chars {
-                display: flex;
-                grid-column: 1 / -1;
-                flex-direction: row;
-                gap: 2px;
-                flex-wrap: wrap;
+        .chars {
+            display: flex;
+            grid-column: 1 / -1;
+            flex-direction: row;
+            gap: 8px 4px;
+            flex-wrap: wrap;
 
-            }
+        }
 
-            .chars img {
-                display: inline-block;
-                height: 32px;
-                width: 32px;
-            }
+        .chars img {
+            display: inline-block;
+            height: 32px;
+            width: 32px;
+        }
 
-            .tabs {
-                width: 100%;
-                display: flex;
-                flex-direction: row;
-                border-bottom: 1px solid hsl(0, 0%, 80%);
-                background-color: hsl(0, 0%, 90%);
-            }
+        .tabs {
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            border-bottom: 1px solid hsl(0, 0%, 80%);
+            background-color: hsl(0, 0%, 90%);
+        }
 
-            .tab {
-                display: block;
-                padding: 10px 20px 8px 20px;
-                border-bottom: 2px solid transparent;
-            }
+        .tab {
+            display: block;
+            padding: 10px 20px 8px 20px;
+            border-bottom: 2px solid transparent;
+        }
 
-            .tab:hover {
-                border-bottom: 2px solid hsl(0, 0%, 80%);
-            }
+        .tab:hover {
+            border-bottom: 2px solid hsl(0, 0%, 80%);
+        }
 
-            .selected_tab {
-                display: block;
-                padding: 10px 20px 8px 20px;
-                border-bottom: 2px solid hsl(200, 80%, 40%);
-            }
+        .selected_tab {
+            display: block;
+            padding: 10px 20px 8px 20px;
+            border-bottom: 2px solid hsl(200, 80%, 40%);
+        }
 
-        </style>
-    </head>
-    <body>
-        <div x-data="{chars: [], selected: 'entry', history: [] }">
-            <nav class="tabs">
-                <span x-on:click="selected = 'entry'" :class="selected == 'entry' ? 'selected_tab' : 'tab'">Entry</span>
-                <span x-on:click="selected = 'history'" :class="selected == 'history' ? 'selected_tab' : 'tab'">History</span>
-            </nav>
-        <div x-show="selected == 'history'">
-            History
-            <button class="clear" x-on:click="history=[]">Clear History</button>
-            <template x-for="hist in history">
-                <div>
-                    <div class="chars">
-                    <template x-for="char in hist">
-                        <img :src="'characters/'+char+'.svg'">
-                    </template>
-                    </div>
-                    <div class="phrase" x-text="hist.join('').replace(/_/g, ' ')"> </div>
+        .tabs h1 {
+            flex-grow: 1;
+            margin: 0;
+            padding: 10px;
+        }
+
+        .container {
+            padding: 20px;
+        }
+
+        main {
+            width: 100%;
+            margin: 0px auto;
+            max-width: 800px;
+            background-color: white;
+            border-radius: 5px;
+            border: 1px solid hsl(0, 0%, 80%);
+        }
+
+        .history-item {
+            padding: 20px;
+            border-top: 1px solid hsl(0, 0%, 80%);
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        .history-nav {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+            padding: 20px;
+        }
+
+        button {
+            border: none;
+            background-color: hsl(200, 80%, 40%);
+            color: white;
+            padding: 5px 10px;
+            border-radius: 5px;
+            font-size: 16px;
+            line-height: 20px;
+        }
+
+        button:hover {
+            background-color: hsl(200, 80%, 50%);
+        }
+
+        button:active {
+            background-color: hsl(200, 80%, 30%);
+        }
+
+        .string {
+            padding: 20px;
+        }
+
+        .input-control {
+            display: flex;
+            padding: 20px;
+            gap: 10px;
+            flex-direction: row;
+            align-items: center;
+            border-top: 1px solid hsl(0, 0%, 80%);
+            border-bottom: 1px solid hsl(0, 0%, 80%);
+        }
+
+        .phrase {
+            flex-grow: 1;
+        }
+    </style>
+</head>
+
+<body>
+    <div x-data="{chars: [], selected: 'entry', history: [] }">
+        <nav class="tabs">
+            <h1 x-show="selected == 'entry'">Enter your phrase</h1>
+            <h1 x-show="selected == 'history'">History</h1>
+            <span x-on:click="selected = 'entry'" :class="selected == 'entry' ? 'selected_tab' : 'tab'"><span
+                    class="material-symbols-outlined">edit_note</span></span>
+            <span x-on:click="selected = 'history'" :class="selected == 'history' ? 'selected_tab' : 'tab'"><span
+                    class="material-symbols-outlined">history</span></span>
+        </nav>
+
+        <div class="container" x-show="selected == 'history'">
+            <main>
+                <div class="history-nav">
+                    <span x-text="history.length + ' phrases'"></span>
+                    <button x-show="history.length > 0" class="clear" x-on:click="history=[]">Clear History</button>
                 </div>
-            </template>
-        </div>
-        <div x-show="selected == 'entry'">
-            <h1 class="header">Entry</h1>
-            <div class="chars">
-                <template x-for="char in chars">
-                    <img :src="'characters/'+char+'.svg'">
+                <template x-for="hist in history">
+                    <div class="history-item">
+                        <div class="chars">
+                            <template x-for="char in hist">
+                                <img :src="'characters/'+char+'.svg'">
+                            </template>
+                        </div>
+                        <div x-text="hist.join('').replace(/_/g, ' ')"> </div>
+                    </div>
                 </template>
-            </div>
-            <div></div>
-            <div class="phrase" x-text="chars.join('').replace(/_/g, ' ')"> </div>
-            <button class="delete" x-on:click="chars.splice(-1, 1)">Delete</button>
-            <button class="clear" x-on:click="history.push(chars), chars=[]">Clear</button>
-            <div class="grid">
-            <div class="char" x-on:click="chars.push('a')" @keyup.a="chars.push('a')"><img src="characters/a.svg"> a</div>
-            <div class="char" x-on:click="chars.push('b')"><img src="characters/b.svg"> b</div>
-            <div class="char" x-on:click="chars.push('c')"><img src="characters/c.svg"> c</div>
-            <div class="char" x-on:click="chars.push('d')"><img src="characters/d.svg"> d</div>
-            <div class="char" x-on:click="chars.push('e')"><img src="characters/e.svg"> e</div>
-            <div class="char" x-on:click="chars.push('f')"><img src="characters/f.svg"> f</div>
-            <div class="char" x-on:click="chars.push('g')"><img src="characters/g.svg"> g</div>
-            <div class="char" x-on:click="chars.push('h')"><img src="characters/h.svg"> h</div>
-            <div class="char" x-on:click="chars.push('i')"><img src="characters/i.svg"> i</div>
-            <div class="char" x-on:click="chars.push('j')"><img src="characters/j.svg"> j</div>
-            <div class="char" x-on:click="chars.push('k')"><img src="characters/k.svg"> k</div>
-            <div class="char" x-on:click="chars.push('l')"><img src="characters/l.svg"> l</div>
-            <div class="char" x-on:click="chars.push('m')"><img src="characters/m.svg"> m</div>
-            <div class="char" x-on:click="chars.push('n')"><img src="characters/n.svg"> n</div>
-            <div class="char" x-on:click="chars.push('o')"><img src="characters/o.svg"> o</div>
-            <div class="char" x-on:click="chars.push('p')"><img src="characters/p.svg"> p</div>
-            <div class="char" x-on:click="chars.push('q')"><img src="characters/q.svg"> q</div>
-            <div class="char" x-on:click="chars.push('r')"><img src="characters/r.svg"> r</div>
-            <div class="char" x-on:click="chars.push('s')"><img src="characters/s.svg"> s</div>
-            <div class="char" x-on:click="chars.push('t')"><img src="characters/t.svg"> t</div>
-            <div class="char" x-on:click="chars.push('u')"><img src="characters/u.svg"> u</div>
-            <div class="char" x-on:click="chars.push('v')"><img src="characters/v.svg"> v</div>
-            <div class="char" x-on:click="chars.push('w')"><img src="characters/w.svg"> w</div>
-            <div class="char" x-on:click="chars.push('x')"><img src="characters/x.svg"> x</div>
-            <div class="char" x-on:click="chars.push('y')"><img src="characters/y.svg"> y</div>
-            <div class="char" x-on:click="chars.push('z')"><img src="characters/z.svg"> z</div>
-            <div class="char" x-on:click="chars.push('th')"><img src="characters/th.svg"> th</div>
-            <div class="char" x-on:click="chars.push('_')"><img src="characters/_.svg">space</div>
+            </main>
+        </div>
 
+        <div class="container" x-show="selected == 'entry'">
+            <main>
+                <div x-show="chars.length > 0" class="string">
+                    <div class="chars">
+                        <template x-for="char in chars">
+                            <img :src="'characters/'+char+'.svg'">
+                        </template>
+                    </div>
+                </div>
+
+                <div x-show="chars.length > 0" class="input-control">
+                    <div class="phrase" x-text="chars.join('').replace(/_/g, ' ')"> </div>
+                    <button x-show="chars.length > 0" class="delete" x-on:click="chars.splice(-1, 1)">Delete</button>
+                    <button x-show="chars.length > 0" class="clear" x-on:click="history.push(chars), chars=[]">Clear</button>
+                </div>
+                <div class="grid">
+                    <div class="char" x-on:click="chars.push('a')"><img src="characters/a.svg"> a</div>
+                    <div class="char" x-on:click="chars.push('b')"><img src="characters/b.svg"> b</div>
+                    <div class="char" x-on:click="chars.push('c')"><img src="characters/c.svg"> c</div>
+                    <div class="char" x-on:click="chars.push('d')"><img src="characters/d.svg"> d</div>
+                    <div class="char" x-on:click="chars.push('e')"><img src="characters/e.svg"> e</div>
+                    <div class="char" x-on:click="chars.push('f')"><img src="characters/f.svg"> f</div>
+                    <div class="char" x-on:click="chars.push('g')"><img src="characters/g.svg"> g</div>
+                    <div class="char" x-on:click="chars.push('h')"><img src="characters/h.svg"> h</div>
+                    <div class="char" x-on:click="chars.push('i')"><img src="characters/i.svg"> i</div>
+                    <div class="char" x-on:click="chars.push('j')"><img src="characters/j.svg"> j</div>
+                    <div class="char" x-on:click="chars.push('k')"><img src="characters/k.svg"> k</div>
+                    <div class="char" x-on:click="chars.push('l')"><img src="characters/l.svg"> l</div>
+                    <div class="char" x-on:click="chars.push('m')"><img src="characters/m.svg"> m</div>
+                    <div class="char" x-on:click="chars.push('n')"><img src="characters/n.svg"> n</div>
+                    <div class="char" x-on:click="chars.push('o')"><img src="characters/o.svg"> o</div>
+                    <div class="char" x-on:click="chars.push('p')"><img src="characters/p.svg"> p</div>
+                    <div class="char" x-on:click="chars.push('q')"><img src="characters/q.svg"> q</div>
+                    <div class="char" x-on:click="chars.push('r')"><img src="characters/r.svg"> r</div>
+                    <div class="char" x-on:click="chars.push('s')"><img src="characters/s.svg"> s</div>
+                    <div class="char" x-on:click="chars.push('t')"><img src="characters/t.svg"> t</div>
+                    <div class="char" x-on:click="chars.push('u')"><img src="characters/u.svg"> u</div>
+                    <div class="char" x-on:click="chars.push('v')"><img src="characters/v.svg"> v</div>
+                    <div class="char" x-on:click="chars.push('w')"><img src="characters/w.svg"> w</div>
+                    <div class="char" x-on:click="chars.push('x')"><img src="characters/x.svg"> x</div>
+                    <div class="char" x-on:click="chars.push('y')"><img src="characters/y.svg"> y</div>
+                    <div class="char" x-on:click="chars.push('z')"><img src="characters/z.svg"> z</div>
+                    <div class="char" x-on:click="chars.push('th')"><img src="characters/th.svg"> th</div>
+                    <div class="char" x-on:click="chars.push('_')"><img src="characters/_.svg">space</div>
+
+                </div>
+            </main>
         </div>
-        </div>
-        </div>
-    </body>
+    </div>
+</body>
+
 </html>
